--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^25.1.3",
     "influx": "^5.0.7",
-    "lighthouse": "3.2.1"
+    "lighthouse": "3.2.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
+    "babel-jest": "^25.1.0",
     "jest": "^25.1.0"
   }
 }
