--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "start": "node src/app.ts",
+    "dev": "ts-node src/app.ts",
+    "build": "tsc src/app.ts",
+    "run": "npm run build && node ./build/app.js",
     "test": "jest"
   },
   "dependencies": {
