return lighthouse types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "./node_modules/lighthouse/typings"
   ],
   "include": [
-    "./src/**/*.ts"
+    "./src/**/*.ts",
+    "./node_modules/lighthouse/typings/*.d.ts"
   ],
   "exclude": [
     "./src/**/*.test.ts"
