--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "scripts": {
     "dev": "ts-node src/app.ts",
-    "build": "tsc -p ./tsconfig.json",
-    "run": "npm run build && node ./build/app.js",
-    "start": "node ./build/app.js",
+    "build": "tsc",
+    "start": "npm run build && node ./build/app.js",
     "test": "jest"
   },
   "dependencies": {
