--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "scripts": {
     "dev": "ts-node src/measureSiteSpeed.ts",
     "build": "tsc",
-    "start": "node ./build/app.js",
+    "start": "node ./build/index.js",
     "test": "jest",
     "build-start": "npm run build && npm run start"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "influx": "^5.0.7",
     "lighthouse": "3.2.1",
     "typescript": "3.1.0-dev.20180831"
@@ -15,6 +16,7 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/node": "8.5.5",
     "babel-jest": "^25.1.0",
