--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitAny": false,
     "resolveJsonModule": true,
     "outDir": "./build",
+    "sourceMap": true,
     "allowJs": true,
     "checkJs": true
   },
