--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.0.7",
     "lighthouse": "3.2.1",
@@ -23,8 +24,8 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/node": "8.5.5",
+    "@types/cors": "^2.8.6",
     "babel-jest": "^25.1.0",
-    "cors": "^2.8.5",
     "cpx": "^1.5.0",
     "devtools-protocol": "0.0.588129",
     "jest": "^25.1.0",
