--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.0.7",
+    "ip": "^1.1.5",
     "lighthouse": "3.2.1",
     "typescript": "3.1.0-dev.20180831"
   },
@@ -21,10 +22,11 @@
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
+    "@types/ip": "^1.1.0",
     "@types/jest": "^25.1.3",
     "@types/node": "8.5.5",
-    "@types/cors": "^2.8.6",
     "babel-jest": "^25.1.0",
     "cpx": "^1.5.0",
     "devtools-protocol": "0.0.588129",
