--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.0.7",
-    "lighthouse": "3.2.1",
-    "typescript": "3.1.0-dev.20180831"
+    "lighthouse": "3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -25,6 +24,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/node": "8.5.5",
+    "typescript": "3.1.0-dev.20180831",
     "babel-jest": "^25.1.0",
     "cpx": "^1.5.0",
     "devtools-protocol": "0.0.588129",
