--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack": "webpack"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "influx": "^5.0.7",
@@ -24,7 +25,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^25.1.3",
     "@types/node": "8.5.5",
-    "typescript": "3.1.0-dev.20180831",
+    "@types/axios": "^0.14.0",
     "babel-jest": "^25.1.0",
     "cpx": "^1.5.0",
     "devtools-protocol": "0.0.588129",
@@ -32,6 +33,7 @@
     "string-replace-loader": "^2.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
+    "typescript": "3.1.0-dev.20180831",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
