--- a/package.json
+++ b/package.json
@@ -9,29 +9,30 @@
     "build-grafana": "ts-node scripts/ts/build-grafana.ts"
   },
   "dependencies": {
+    "@influxdata/influxdb-client": "^1.18.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "influx": "^5.0.7",
-    "lighthouse": "3.2.1"
+    "lighthouse": "latest"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/preset-env": "^7.8.4",
     "@babel/preset-typescript": "^7.8.3",
-    "@types/cors": "^2.8.6",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.3",
-    "@types/node": "8.5.5",
-    "@types/axios": "^0.14.0",
-    "babel-jest": "^25.1.0",
+    "@types/axios": "latest",
+    "@types/cors": "latest",
+    "@types/express": "latest",
+    "@types/jest": "latest",
+    "@types/node": "latest",
+    "babel-jest": "25.1.0",
     "cpx": "^1.5.0",
     "devtools-protocol": "0.0.588129",
-    "jest": "^25.1.0",
+    "jest": "25.1.0",
     "string-replace-loader": "^2.2.0",
     "ts-loader": "^6.2.1",
     "ts-node": "^8.6.2",
-    "typescript": "3.1.0-dev.20180831",
+    "typescript": "latest",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   }
